footer section updated

--- a/index.html
+++ b/index.html
@@ -226,10 +226,8 @@
 		
 		<section class="product">
 			<div class="section-heading">
-				<h3 class="product_heading">we buy our products only from 
-					<img src="./assets/images/view8a.png" class="product_image" alt=""/> trusted suppliers in accra to gurantee 
-					<img src="./assets/images/view8c.png" class="product_image" alt=""/> the highest quality of 
-					<img src="./assets/images/view8b.png" class="product_image" alt=""/> our dishes</h3>
+				<h3 class="product_heading">we buy our products only from trusted suppliers
+					in accra to gurantee the highest quality of our dishes</h3>
 			</div>	
 			
 			<div>
