website improvement(margins and padding)

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
 		<section class="speciality">
 			<div class="speciality__headings">		
-				<h3 class="section-heading speciality__heading-1">our eatery provides an array of quality ingredients 
+				<h3 class="section-heading speciality__heading">our eatery provides an array of quality ingredients 
 					creating a diverse range of flavourful dishes.</h3>
 			</div>
 			
@@ -186,7 +186,7 @@
 					</div>
 					
 					<div class="venue_image">
-						<img src="./assets/images/Image_10b.png" alt=""/>
+						<img src="./assets/images/Image_pot.png" alt=""/>
 					</div>
 					
 					<div class="venue_image">
