Media query padding update

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 			
 			<div class="banner_sub-heading">
 				<p>With a deep-rooted love for all things seafood,our talented 
-					chefs combine culinary expertise with creativity to craft dishes that celebrate the
-					ocean's treasures.</p>
+					chefs combine culinary expertise with creativity to craft
+					dishes that celebrate the ocean's treasures.</p>
 			</div>
 		</section>
 		
@@ -263,6 +263,7 @@
 						</li>
 					</ul>
 				</div>	
+				
 				<div class="footer_list-social">	
 					<ul class="section_list">
 						<li>
