Website modified(media query)

--- a/index.html
+++ b/index.html
@@ -3,15 +3,22 @@
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" href="./assets/css/style.css">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
 	</head>
 	
 	<body>
 		<header>
 			<nav class="nav">
+				<input type="checkbox" id="check">
+				<label for="check" class="check-btn"> 
+					<i class="fas fa-bars"></i>
+				</label>
 				<div class="navmain">	
-					<span class=logocap1>nsuomnam</span>
 					<div class="navmenu">
 						<ul>
+							<div class=logocap1>
+								<h4>nsuomnam<h4>
+							</div>
 							<li>
 								<a href="#">History</a>
 							</li>
@@ -27,7 +34,7 @@
 						</ul>
 					</div>
 					
-					<div>			
+					<div class="right-nav">			
 						<button class="section-btn">Shopping Cart</button>
 					</div>
 				</div>
@@ -286,8 +293,7 @@
 						<button class="section-btn">Shopping Cart</button>
 					</div>
 					<div class="footer-thank">
-						<span class="footer_content_right_line-1">Thankyou for choosing</span> 
-						<span class="footer_content_right_line-2">Emperor Restaurant</span>
+						<span class="footer_content_right_bottom">Thankyou for choosing<br>Emperor Restaurant</span>
 					</div>
 				</div>
 			</div>	
